--- a/docs.html
+++ b/docs.html
@@ -191,65 +191,108 @@
                     </p>
                 </div>
 
-                <div class="grid md:grid-cols-3 gap-6">
+                <div class="grid md:grid-cols-3 gap-8">
                     <!-- Grid Layout Preview -->
-                    <div class="bg-white p-6 rounded-3xl shadow-sm border border-[#f0f0f0]">
-                        <div class="flex items-center justify-between mb-4">
-                            <span class="text-[10px] font-black uppercase tracking-wider">Grid</span>
-                            <span class="material-symbols-outlined text-[#5c5f62] text-sm">grid_view</span>
+                    <div class="space-y-4">
+                        <div
+                            class="bg-white p-6 rounded-[2rem] shadow-sm border border-[#f0f0f0] flex flex-col h-full transform transition-transform hover:scale-[1.02]">
+                            <div class="flex items-center justify-between mb-6">
+                                <div class="space-y-1">
+                                    <h5 class="text-[10px] font-black uppercase tracking-widest text-[#1a1c1d]">Grid
+                                        Feed
+                                    </h5>
+                                    <div class="flex gap-0.5">
+                                        <div class="w-4 h-0.5 bg-primary rounded-full"></div>
+                                        <div class="w-1 h-0.5 bg-[#e1e3e5] rounded-full"></div>
+                                    </div>
+                                </div>
+                                <span class="material-symbols-outlined text-[#919eab] text-lg">grid_view</span>
+                            </div>
+                            <div class="grid grid-cols-3 gap-3">
+                                <div class="aspect-square rounded-xl overflow-hidden shadow-sm">
+                                    <img src="https://images.unsplash.com/photo-1491553895911-0055eca6402d?w=200&h=200&fit=crop"
+                                        class="w-full h-full object-cover block">
+                                </div>
+                                <div class="aspect-square rounded-xl overflow-hidden shadow-sm">
+                                    <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=200&h=200&fit=crop"
+                                        class="w-full h-full object-cover block">
+                                </div>
+                                <div class="aspect-square rounded-xl overflow-hidden shadow-sm">
+                                    <img src="https://images.unsplash.com/photo-1560769629-975ec94e6a86?w=200&h=200&fit=crop"
+                                        class="w-full h-full object-cover block">
+                                </div>
+                                <div class="aspect-square rounded-xl overflow-hidden shadow-sm">
+                                    <img src="https://images.unsplash.com/photo-1525966222134-fcfa99b8ae77?w=200&h=200&fit=crop"
+                                        class="w-full h-full object-cover block">
+                                </div>
+                                <div class="aspect-square rounded-xl overflow-hidden shadow-sm">
+                                    <img src="https://images.unsplash.com/photo-1549298916-b41d501d3772?w=200&h=200&fit=crop"
+                                        class="w-full h-full object-cover block">
+                                </div>
+                                <div class="aspect-square rounded-xl overflow-hidden shadow-sm">
+                                    <img src="https://images.unsplash.com/photo-1511556532299-8f662fc26c06?w=200&h=200&fit=crop"
+                                        class="w-full h-full object-cover block">
+                                </div>
+                            </div>
                         </div>
-                        <div class="grid grid-cols-3 gap-2">
-                            <div class="aspect-square bg-[#f4f6f8] rounded-md overflow-hidden">
-                                <img src="https://images.unsplash.com/photo-1491553895911-0055eca6402d?w=200&h=200&fit=crop"
-                                    class="w-full h-full object-cover block">
-                            </div>
-                            <div class="aspect-square bg-[#f4f6f8] rounded-md overflow-hidden">
-                                <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=200&h=200&fit=crop"
-                                    class="w-full h-full object-cover block">
-                            </div>
-                            <div class="aspect-square bg-[#f4f6f8] rounded-md overflow-hidden">
-                                <img src="https://images.unsplash.com/photo-1560769629-975ec94e6a86?w=200&h=200&fit=crop"
-                                    class="w-full h-full object-cover block">
-                            </div>
-                            <div class="aspect-square bg-[#f4f6f8] rounded-md overflow-hidden">
-                                <img src="https://images.unsplash.com/photo-1525966222134-fcfa99b8ae77?w=200&h=200&fit=crop"
-                                    class="w-full h-full object-cover block">
-                            </div>
-                            <div class="aspect-square bg-[#f4f6f8] rounded-md overflow-hidden">
-                                <img src="https://images.unsplash.com/photo-1549298916-b41d501d3772?w=200&h=200&fit=crop"
-                                    class="w-full h-full object-cover block">
-                            </div>
-                            <div class="aspect-square bg-[#f4f6f8] rounded-md overflow-hidden">
-                                <img src="https://images.unsplash.com/photo-1511556532299-8f662fc26c06?w=200&h=200&fit=crop"
-                                    class="w-full h-full object-cover block">
-                            </div>
-                        </div>
+                        <p class="text-center text-[10px] font-black uppercase tracking-widest text-[#1a1c1d]">Grid Feed
+                        </p>
                     </div>
 
                     <!-- Slider Layout Preview -->
-                    <div class="bg-white p-6 rounded-3xl shadow-sm border border-[#f0f0f0]">
-                        <div class="flex items-center justify-between mb-4">
-                            <span class="text-[10px] font-black uppercase tracking-wider">Slider</span>
-                            <div class="flex gap-1 text-[#ff5a3d]">
-                                <span class="material-symbols-outlined text-sm">chevron_left</span>
-                                <span class="material-symbols-outlined text-sm">chevron_right</span>
+                    <div class="space-y-4">
+                        <div
+                            class="bg-white p-6 rounded-[2rem] shadow-sm border border-[#f0f0f0] flex flex-col h-full transform transition-transform hover:scale-[1.02]">
+                            <div class="flex items-center justify-between mb-6">
+                                <div class="space-y-1">
+                                    <h5 class="text-[10px] font-black uppercase tracking-widest text-[#1a1c1d]">Slider
+                                        Feed
+                                    </h5>
+                                    <div class="flex gap-0.5">
+                                        <div class="w-4 h-0.5 bg-primary rounded-full"></div>
+                                        <div class="w-1 h-0.5 bg-[#e1e3e5] rounded-full"></div>
+                                    </div>
+                                </div>
+                                <div class="flex gap-2">
+                                    <div
+                                        class="size-6 rounded-full border border-[#f0f0f0] flex items-center justify-center text-[#919eab]">
+                                        <span class="material-symbols-outlined text-xs">chevron_left</span>
+                                    </div>
+                                    <div
+                                        class="size-6 rounded-full border border-[#f0f0f0] flex items-center justify-center text-primary shadow-sm bg-white">
+                                        <span class="material-symbols-outlined text-xs font-bold">chevron_right</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex gap-4 overflow-hidden">
+                                <div class="w-[70%] aspect-square rounded-2xl overflow-hidden shadow-md shrink-0">
+                                    <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=400&h=400&fit=crop"
+                                        class="w-full h-full object-cover block">
+                                </div>
+                                <div
+                                    class="w-[70%] aspect-square rounded-2xl overflow-hidden shadow-md shrink-0 opacity-40">
+                                    <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?w=400&h=400&fit=crop"
+                                        class="w-full h-full object-cover block">
+                                </div>
+                            </div>
+                            <div class="flex justify-center gap-1.5 mt-6">
+                                <div class="w-1.5 h-1.5 rounded-full bg-primary"></div>
+                                <div class="w-1.5 h-1.5 rounded-full bg-[#e1e3e5]"></div>
+                                <div class="w-1.5 h-1.5 rounded-full bg-[#e1e3e5]"></div>
                             </div>
                         </div>
-                        <div class="flex gap-3">
-                            <div class="w-1/2 aspect-square bg-[#f4f6f8] rounded-lg overflow-hidden shrink-0">
-                                <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=400&h=400&fit=crop"
-                                    class="w-full h-full object-cover block">
-                            </div>
-                            <div class="w-1/2 aspect-square bg-[#f4f6f8] rounded-lg overflow-hidden shrink-0">
-                                <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?w=400&h=400&fit=crop"
-                                    class="w-full h-full object-cover block">
-                            </div>
-                        </div>
+                        <p class="text-center text-[10px] font-black uppercase tracking-widest text-[#1a1c1d]">Slider
+                            Feed</p>
                     </div>
 
                     <!-- Style Editor Image -->
-                    <div class="flex items-center justify-center">
-                        <img src="assets/style-image.png" alt="Style Editor" class="w-full h-auto object-contain block">
+                    <div class="space-y-4">
+                        <div class="flex items-center justify-center p-2 h-full">
+                            <img src="assets/style-image.png" alt="Style Editor"
+                                class="w-full h-auto object-contain block rounded-3xl shadow-xl border border-[#f0f0f0]">
+                        </div>
+                        <p class="text-center text-[10px] font-black uppercase tracking-widest text-[#1a1c1d]">Color
+                            Picker</p>
                     </div>
                 </div>
 
